--- a/JS Back-End/04.06.08.Workshop/src/views/layouts/main.hbs
+++ b/JS Back-End/04.06.08.Workshop/src/views/layouts/main.hbs
@@ -26,7 +26,11 @@
                 <li><a href="/about">About</a></li>
             </ul>
         </header>
-
+        {{#if error}}
+        <div id="notifications">
+            <p id="notification-message">{{error}}</p>
+        </div>
+        {{/if}}
         {{{body}}}
     </div>
     <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
